--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
-                "--extensionDevelopmentPath=${workspaceRoot}/editors/vscode"
-            ],
-            "outFiles": [
-                "${workspaceRoot}/editors/vscode/out/**/*.js"
+                "--extensionDevelopmentPath=${workspaceFolder}/editors/vscode"
             ],
             "preLaunchTask": "build-all"
         }
