--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ editors/vscode/out/extension.js.map
 editors/vscode/package-lock.json
 codebase.md
 codebase_excluded_paths.txt
+architecture.png
+graph.json
