--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,11 +5,7 @@ edition = "2021"
 
 authors = ["Tesserato <tesserato@hotmail.com>"]
 
-include = [
-    "src/**/*",
-    "README.md",
-    "LICENSE",
-]
+include = ["src/**/*", "README.md", "LICENSE"]
 description = "A meta-programming language for reasoning about code architecture."
 license = "MIT"
 
@@ -19,13 +15,7 @@ documentation = "https://docs.rs/Tect"
 
 readme = "README.md"
 
-keywords = [
-    "architecture",
-    "dsl",
-    "modeling",
-    "compiler",
-    "visualization"
-]
+keywords = ["architecture", "dsl", "modeling", "compiler", "visualization"]
 
 categories = [
     "development-tools",
@@ -35,8 +25,13 @@ categories = [
 ]
 
 [dependencies]
-pest = "2.8"
-pest_derive = "2.8"
-tower-lsp = "0.20"
-tokio = { version = "1.48", features = ["full"] }
-dashmap = "6.1"
+tower-lsp = "0.20.0"
+tokio = { version = "1.0", features = ["full"] }
+pest = "2.7"
+pest_derive = "2.7"
+dashmap = "5.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = { version = "4.4", features = ["derive"] }
+walkdir = "2.4"
+anyhow = "1.0"
