--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,9 @@ editors/vscode/out/extension.js.map
 editors/vscode/package-lock.json
 codebase.md
 codebase_excluded_paths.txt
-architecture.png
 graph.json
 editors/vscode/out/extension.js
-architecture.svg
+*.png
+*.svg
 *.dot
+*.html
