--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -30,7 +30,7 @@ tokio = { version = "1.0", features = ["full"] }
 pest = "2.7"
 pest_derive = "2.7"
 dashmap = "5.5"
-serde = { version = "1.0", features = ["derive", "Arc"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 walkdir = "2.4"
