--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,77 +1,88 @@
 name: Publish Extension
 
 on:
-  push:
-    tags:
-      - "v*"
+    push:
+        tags:
+            - "v*"
 
 jobs:
-  build-rust:
-    name: Build Rust Binary (${{ matrix.target }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            suffix: ""
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            suffix: ".exe"
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            suffix: ""
-          - os: macos-latest
-            target: aarch64-apple-darwin
-            suffix: ""
+    build-rust:
+        name: Build Rust Binary (${{ matrix.target }})
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                include:
+                    - os: ubuntu-latest
+                      target: x86_64-unknown-linux-gnu
+                      suffix: ""
+                    - os: windows-latest
+                      target: x86_64-pc-windows-msvc
+                      suffix: ".exe"
+                    - os: macos-latest
+                      target: x86_64-apple-darwin
+                      suffix: ""
+                    - os: macos-latest
+                      target: aarch64-apple-darwin
+                      suffix: ""
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Build Binary
-        run: cargo build --release --target ${{ matrix.target }}
-        working-directory: ./server
+            - name: Install Rust
+              uses: dtolnay/rust-toolchain@stable
+              with:
+                  targets: ${{ matrix.target }}
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: binaries
-          path: server/target/${{ matrix.target }}/release/tect${{ matrix.suffix }}
+            - name: Build Binary
+              run: cargo build --release --target ${{ matrix.target }}
+              working-directory: ./server
 
-  publish:
-    name: Package and Publish
-    needs: build-rust
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+            - name: Upload Artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  # v4 requires unique names for matrix uploads
+                  name: tect-${{ matrix.target }}
+                  path: server/target/${{ matrix.target }}/release/tect${{ matrix.suffix }}
+                  if-no-files-found: error
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+    publish:
+        name: Package and Publish
+        needs: build-rust
+        runs-on: ubuntu-latest
+        # Optional: ensure this only runs if tagged from main
+        # if: github.event.base_ref == 'refs/heads/main'
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: npm install
-        working-directory: ./editors/vscode
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 20
 
-      - name: Download All Binaries
-        uses: actions/download-artifact@v3
-        with:
-          name: binaries
-          path: editors/vscode/bin
+            - name: Install Dependencies
+              run: npm install
+              working-directory: ./editors/vscode
 
-      - name: Rename Binaries for Extension
-        run: |
-          cd editors/vscode/bin
-          mv tect tect-x86_64-unknown-linux-gnu || true
-          mv tect.exe tect-x86_64-pc-windows-msvc.exe || true
-          # Note: macOS binaries require careful handling if built on same runner
-          # This script assumes artifacts are named uniquely in upload or handled here
+            - name: Create bin directory
+              run: mkdir -p editors/vscode/bin
 
-      - name: Publish to Marketplace
-        run: npx vsce publish --pat ${{ secrets.VSCE_PAT }}
-        working-directory: ./editors/vscode
+            - name: Download All Binaries
+              uses: actions/download-artifact@v4
+              with:
+                  path: editors/vscode/bin
+                  # This downloads all artifacts into subdirectories named after the artifact
+                  pattern: tect-*
+                  merge-multiple: true
+
+            - name: Rename Binaries for Extension
+              run: |
+                  cd editors/vscode/bin
+                  # Ensure the names match exactly what extension.ts looks for
+                  mv tect tect-x86_64-unknown-linux-gnu || true
+                  mv tect.exe tect-x86_64-pc-windows-msvc.exe || true
+                  # List files for debugging in Action logs
+                  ls -R
+
+            - name: Publish to Marketplace
+              run: npx vsce publish --pat ${{ secrets.VSCE_PAT }}
+              working-directory: ./editors/vscode
