--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,15 +34,16 @@ jobs:
                   targets: ${{ matrix.target }}
 
             - name: Build Binary
-              run: cargo build --release --target ${{ matrix.target }}
-              working-directory: ./server
+              # Running from root as it is a workspace
+              run: cargo build --release --target ${{ matrix.target }} -p server
 
-            # This step ensures we find the binary regardless of Cargo's target folder logic
+            # Staging logic that handles Workspace root 'target' folder
             - name: Stage Binary
               shell: bash
               run: |
                   mkdir -p staging
-                  find server/target -name "tect${{ matrix.suffix }}" -path "*/release/*" -exec cp {} staging/tect-bin${{ matrix.suffix }} \;
+                  # Search in the root target folder (workspace default)
+                  find target -name "tect${{ matrix.suffix }}" -path "*/release/*" -exec cp {} staging/tect-bin${{ matrix.suffix }} \;
 
             - name: Upload Artifact
               uses: actions/upload-artifact@v4
@@ -75,23 +76,10 @@ jobs:
               with:
                   path: editors/vscode/bin-temp
                   pattern: tect-*
-                  merge-multiple: false # Keep in subfolders to identify which is which
+                  merge-multiple: false
 
             - name: Flatten and Rename Binaries
               run: |
-                  # Move and rename binaries to match extension.ts discovery logic
+                  # Standardize names for extension.ts
                   cp editors/vscode/bin-temp/tect-x86_64-unknown-linux-gnu/tect-bin editors/vscode/bin/tect-x86_64-unknown-linux-gnu
-                  cp editors/vscode/bin-temp/tect-x86_64-pc-windows-msvc/tect-bin.exe editors/vscode/bin/tect-x86_64-pc-windows-msvc.exe
-                  cp editors/vscode/bin-temp/tect-x86_64-apple-darwin/tect-bin editors/vscode/bin/tect-x86_64-apple-darwin
-                  cp editors/vscode/bin-temp/tect-aarch64-apple-darwin/tect-bin editors/vscode/bin/tect-aarch64-apple-darwin
-
-                  # Clean up temp folder
-                  rm -rf editors/vscode/bin-temp
-
-                  # Debug output
-                  echo "Final bundled binaries:"
-                  ls -R editors/vscode/bin
-
-            - name: Publish to Marketplace
-              run: npx vsce publish --pat ${{ secrets.VSCE_PAT }}
-              working-directory: ./editors/vscode
+                  cp editors/vscode/bin-temp/tect-x86_64-pc-windows-msvc/tect-bin.exe editors/vscode
