--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,15 +34,15 @@ jobs:
                   targets: ${{ matrix.target }}
 
             - name: Build Binary
-              # Running from root as it is a workspace
-              run: cargo build --release --target ${{ matrix.target }} -p server
+              # Run inside the member directory to avoid package name ambiguity
+              run: cargo build --release --target ${{ matrix.target }}
+              working-directory: ./server
 
-            # Staging logic that handles Workspace root 'target' folder
             - name: Stage Binary
+              # Staging runs from root because Workspace 'target' is at the root
               shell: bash
               run: |
                   mkdir -p staging
-                  # Search in the root target folder (workspace default)
                   find target -name "tect${{ matrix.suffix }}" -path "*/release/*" -exec cp {} staging/tect-bin${{ matrix.suffix }} \;
 
             - name: Upload Artifact
@@ -80,6 +80,16 @@ jobs:
 
             - name: Flatten and Rename Binaries
               run: |
-                  # Standardize names for extension.ts
+                  # Standardize names for extension.ts discovery
                   cp editors/vscode/bin-temp/tect-x86_64-unknown-linux-gnu/tect-bin editors/vscode/bin/tect-x86_64-unknown-linux-gnu
-                  cp editors/vscode/bin-temp/tect-x86_64-pc-windows-msvc/tect-bin.exe editors/vscode
+                  cp editors/vscode/bin-temp/tect-x86_64-pc-windows-msvc/tect-bin.exe editors/vscode/bin/tect-x86_64-pc-windows-msvc.exe
+                  cp editors/vscode/bin-temp/tect-x86_64-apple-darwin/tect-bin editors/vscode/bin/tect-x86_64-apple-darwin
+                  cp editors/vscode/bin-temp/tect-aarch64-apple-darwin/tect-bin editors/vscode/bin/tect-aarch64-apple-darwin
+
+                  rm -rf editors/vscode/bin-temp
+                  echo "Bundled binaries ready:"
+                  ls -l editors/vscode/bin
+
+            - name: Publish to Marketplace
+              run: npx vsce publish --pat ${{ secrets.VSCE_PAT }}
+              working-directory: ./editors/vscode
