--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,16 +34,18 @@ jobs:
                   targets: ${{ matrix.target }}
 
             - name: Build Binary
-              # Run inside the member directory to avoid package name ambiguity
               run: cargo build --release --target ${{ matrix.target }}
               working-directory: ./server
 
             - name: Stage Binary
-              # Staging runs from root because Workspace 'target' is at the root
               shell: bash
               run: |
                   mkdir -p staging
-                  find target -name "tect${{ matrix.suffix }}" -path "*/release/*" -exec cp {} staging/tect-bin${{ matrix.suffix }} \;
+                  # Robust search for the binary in Workspace root 'target'
+                  # Looks for the name 'tect' inside any folder named 'release'
+                  BIN_PATH=$(find target -type f -name "tect${{ matrix.suffix }}" | grep "/release/" | head -n 1)
+                  if [ -z "$BIN_PATH" ]; then echo "Binary not found"; exit 1; fi
+                  cp "$BIN_PATH" staging/tect-bin${{ matrix.suffix }}
 
             - name: Upload Artifact
               uses: actions/upload-artifact@v4
@@ -80,14 +82,14 @@ jobs:
 
             - name: Flatten and Rename Binaries
               run: |
-                  # Standardize names for extension.ts discovery
+                  # Copy to final names expected by extension.ts discovery logic
                   cp editors/vscode/bin-temp/tect-x86_64-unknown-linux-gnu/tect-bin editors/vscode/bin/tect-x86_64-unknown-linux-gnu
                   cp editors/vscode/bin-temp/tect-x86_64-pc-windows-msvc/tect-bin.exe editors/vscode/bin/tect-x86_64-pc-windows-msvc.exe
                   cp editors/vscode/bin-temp/tect-x86_64-apple-darwin/tect-bin editors/vscode/bin/tect-x86_64-apple-darwin
                   cp editors/vscode/bin-temp/tect-aarch64-apple-darwin/tect-bin editors/vscode/bin/tect-aarch64-apple-darwin
 
                   rm -rf editors/vscode/bin-temp
-                  echo "Bundled binaries ready:"
+                  echo "Packaging following binaries:"
                   ls -l editors/vscode/bin
 
             - name: Publish to Marketplace
