--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -98,5 +98,5 @@ jobs:
                   ls -R editors/vscode/bin
 
             - name: Publish to Marketplace
-              run: npx vsce publish --pat ${{ secrets.VSCE_PAT }} --allow-unused-files-patterns
+              run: npx @vscode/vsce publish --pat ${{ secrets.VSCE_PAT }}
               working-directory: ./editors/vscode
