includes node_modules

--- a/editors/vscode/package.json
+++ b/editors/vscode/package.json
@@ -2,7 +2,7 @@
     "name": "tect",
     "displayName": "Tect Architecture Language",
     "description": "Architectural Specification Language & Visualizer",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "publisher": "tesserato",
     "engines": {
         "vscode": "^1.75.0"
@@ -18,9 +18,10 @@
     ],
     "main": "out/extension.js",
     "files": [
-        "out/*",
-        "bin/*",
-        "syntaxes/*"
+        "out/**",
+        "bin/**",
+        "syntaxes/**",
+        "node_modules/**"
     ],
     "activationEvents": [
         "onLanguage:tect"
