implements packaging locally

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ DRAFT.md
 extensions/vscode/node_modules
 extensions/vscode/package-lock.json
 extensions/vscode/out
+extensions/vscode/bin
+*.vsix
+extensions/vscode/LICENSE
