--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -20,12 +20,11 @@
         "Programming Languages",
         "Visualization"
     ],
-    "main": "out/extension.js",
+    "main": "./dist/extension.js",
     "files": [
-        "out/**",
+        "dist/**",
         "bin/**",
-        "syntaxes/**",
-        "node_modules/**"
+        "syntaxes/**"
     ],
     "activationEvents": [
         "onLanguage:tect"
@@ -69,10 +68,11 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile"
+        "vscode:prepublish": "npm run package",
+        "compile": "tsc -b",
+        "watch": "tsc -b -w",
+        "package": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --minify",
+        "pretest": "npm run compile && npm run package"
     },
     "dependencies": {
         "vscode-languageclient": "^8.1.0"
@@ -80,7 +80,8 @@
     "devDependencies": {
         "@types/node": "16.x",
         "@types/vscode": "^1.75.0",
-        "typescript": "^4.9.5",
-        "@vscode/vsce": "^2.19.0"
+        "@vscode/vsce": "^2.19.0",
+        "esbuild": "^0.24.0",
+        "typescript": "^4.9.5"
     }
 }
