--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -5,13 +5,12 @@
     "version": "0.0.4",
     "publisher": "tesserato",
     "engines": {
-        "vscode": "^1.75.0"
+        "vscode": "^1.108.0"
     },
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/tesserato/Tect/issues"
     },
-
     "repository": {
         "type": "git",
         "url": "https://github.com/tesserato/Tect"
@@ -24,7 +23,8 @@
     "files": [
         "dist/**",
         "bin/**",
-        "syntaxes/**"
+        "syntaxes/**",
+        "LICENSE"
     ],
     "activationEvents": [
         "onLanguage:tect"
@@ -75,13 +75,13 @@
         "pretest": "npm run compile && npm run package"
     },
     "dependencies": {
-        "vscode-languageclient": "^8.1.0"
+        "vscode-languageclient": "^9.0.1"
     },
     "devDependencies": {
-        "@types/node": "16.x",
-        "@types/vscode": "^1.75.0",
-        "@vscode/vsce": "^2.19.0",
-        "esbuild": "^0.24.0",
-        "typescript": "^4.9.5"
+        "@types/node": "25.x",
+        "@types/vscode": "^1.108.0",
+        "@vscode/vsce": "^3.7.1",
+        "esbuild": "^0.27.2",
+        "typescript": "^5.9.3"
     }
 }
