--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,6 +33,7 @@ dashmap = "6.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 clap = { version = "4.5", features = ["derive"] }
+colored = "2.0"
 walkdir = "2.5"
 anyhow = "1.0"
 regex = "1.12"
