--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,9 +7,10 @@ on:
 
 jobs:
     build-rust:
-        name: Build Rust Binary (${{ matrix.target }})
+        name: Build Binary (${{ matrix.target }})
         runs-on: ${{ matrix.os }}
         strategy:
+            fail-fast: false
             matrix:
                 include:
                     - os: ubuntu-latest
@@ -18,9 +19,11 @@ jobs:
                     - os: windows-latest
                       target: x86_64-pc-windows-msvc
                       suffix: ".exe"
-                    - os: macos-latest
+                    # Use macos-13 for Intel (x86_64) native build
+                    - os: macos-13
                       target: x86_64-apple-darwin
                       suffix: ""
+                    # Use macos-latest (currently macos-14/ARM) for M1/M2 native build
                     - os: macos-latest
                       target: aarch64-apple-darwin
                       suffix: ""
@@ -37,19 +40,25 @@ jobs:
               run: cargo build --release --target ${{ matrix.target }}
               working-directory: ./server
 
-            - name: Stage Binary
+            - name: Prepare Artifact
               shell: bash
               run: |
                   mkdir -p staging
-                  BIN_PATH=$(find target -type f -iname "tect${{ matrix.suffix }}" | grep "/release/" | head -n 1)
-                  if [ -z "$BIN_PATH" ]; then echo "::error::Executable not found"; exit 1; fi
-                  cp "$BIN_PATH" staging/tect-bin${{ matrix.suffix }}
+                  # Define source path based on target
+                  SRC_PATH="server/target/${{ matrix.target }}/release/tect${{ matrix.suffix }}"
+
+                  if [ ! -f "$SRC_PATH" ]; then
+                    echo "::error::Binary not found at $SRC_PATH"
+                    exit 1
+                  fi
+
+                  cp "$SRC_PATH" staging/tect${{ matrix.suffix }}
 
             - name: Upload Artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: tect-${{ matrix.target }}
-                  path: staging/tect-bin${{ matrix.suffix }}
+                  name: binary-${{ matrix.target }}
+                  path: staging/tect${{ matrix.suffix }}
                   if-no-files-found: error
 
     publish:
@@ -64,39 +73,52 @@ jobs:
               with:
                   node-version: 20
 
-            - name: Create required directories
+            - name: Install Dependencies & Compile
+              working-directory: ./extensions/vscode
               run: |
-                  mkdir -p editors/vscode/bin
-                  mkdir -p editors/vscode/out
-
-            - name: Install Dependencies and Compile
-              run: |
-                  npm install
+                  npm ci
                   npm run compile
-              working-directory: ./editors/vscode
 
-            - name: Ensure License and Readme
+            - name: Prepare Extension Assets
               run: |
-                  cd editors/vscode
-                  if [ ! -f LICENSE ]; then echo "MIT License - Copyright (c) $(date +%Y) Tect" > LICENSE; fi
-                  if [ ! -f README.md ]; then echo "# Tect Architecture" > README.md; fi
+                  # Ensure bin directory exists
+                  mkdir -p extensions/vscode/bin
+
+                  # Copy root license/readme if they exist, otherwise rely on extension folder ones
+                  if [ -f LICENSE ]; then cp LICENSE extensions/vscode/LICENSE; fi
+                  # Don't overwrite extension specific readme if it exists, or append? 
+                  # Usually extension has its own. Assuming existing one is good or cp root:
+                  # cp README.md extensions/vscode/README.md
 
             - name: Download All Binaries
               uses: actions/download-artifact@v4
               with:
-                  path: editors/vscode/bin-temp
-                  pattern: tect-*
+                  path: downloaded-bins
+                  pattern: binary-*
                   merge-multiple: false
 
-            - name: Flatten and Rename Binaries
+            - name: Place Binaries
               run: |
-                  cp editors/vscode/bin-temp/tect-x86_64-unknown-linux-gnu/tect-bin editors/vscode/bin/tect-x86_64-unknown-linux-gnu
-                  cp editors/vscode/bin-temp/tect-x86_64-pc-windows-msvc/tect-bin.exe editors/vscode/bin/tect-x86_64-pc-windows-msvc.exe
-                  cp editors/vscode/bin-temp/tect-x86_64-apple-darwin/tect-bin editors/vscode/bin/tect-x86_64-apple-darwin
-                  cp editors/vscode/bin-temp/tect-aarch64-apple-darwin/tect-bin editors/vscode/bin/tect-aarch64-apple-darwin
-                  rm -rf editors/vscode/bin-temp
-                  ls -R editors/vscode/bin
+                  # Move binaries to extensions/vscode/bin with the specific names expected by extension.ts
+
+                  # Linux
+                  cp downloaded-bins/binary-x86_64-unknown-linux-gnu/tect extensions/vscode/bin/tect-x86_64-unknown-linux-gnu
+                  chmod +x extensions/vscode/bin/tect-x86_64-unknown-linux-gnu
+
+                  # Windows
+                  cp downloaded-bins/binary-x86_64-pc-windows-msvc/tect.exe extensions/vscode/bin/tect-x86_64-pc-windows-msvc.exe
+
+                  # Mac Intel
+                  cp downloaded-bins/binary-x86_64-apple-darwin/tect extensions/vscode/bin/tect-x86_64-apple-darwin
+                  chmod +x extensions/vscode/bin/tect-x86_64-apple-darwin
+
+                  # Mac ARM
+                  cp downloaded-bins/binary-aarch64-apple-darwin/tect extensions/vscode/bin/tect-aarch64-apple-darwin
+                  chmod +x extensions/vscode/bin/tect-aarch64-apple-darwin
+
+                  # Verify
+                  ls -l extensions/vscode/bin/
 
             - name: Publish to Marketplace
-              run: npx @vscode/vsce publish --pat ${{ secrets.VSCE_PAT }}
-              working-directory: ./editors/vscode
+              working-directory: ./extensions/vscode
+              run: npx @vscode/vsce publish --pat ${{ secrets.VSCE_PAT }} --packagePath .
