--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tect",
-    "displayName": "Tect Architecture Language",
-    "description": "Architectural Specification Language & Visualizer",
+    "displayName": "Tect",
+    "description": "Lightweight Architectural Specification Language & Visualizer",
     "version": "0.0.4",
     "publisher": "tesserato",
     "engines": {
