--- a/extensions/vscode/tsconfig.json
+++ b/extensions/vscode/tsconfig.json
@@ -10,7 +10,8 @@
         "sourceMap": true,
         "rootDir": "src",
         "strict": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules",
